# book_rental_app

./: LICENSE  README.md  pyproject.toml
book_rental_app/: hooks.py
book_rental_app/book_rental_app/doctype/book/: book.js  book.json  book.py  test_book.py
book_rental_app/book_rental_app/doctype/owner/: owner.js  owner.json  owner.py  test_owner.py
book_rental_app/book_rental_app/doctype/rental/: rental.js  rental.json  rental.py  test_rental.py
book_rental_app/config/: desktop.py  docs.py
